@@ -523,6 +523,8 @@ RELEASE 0.97 - XXX
   - When building a .jar file and there is a $JARCHDIR, put the -C
     in front of each .class file on the command line.
 
+  - Recognize the Java 1.5 enum keyword.
+
   From Chris Pawling:
 
   - Have the linkloc tool use $MSVS_VERSION to select the Microsoft
